--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
 
-name: install docker
-include: 'install_docker.yml'
-tags: install_docker
+- name: install docker
+  include: 'install_docker.yml'
+  tags: install_docker
