--- a/tasks/install_docker.yml
+++ b/tasks/install_docker.yml
@@ -1,4 +1,4 @@
 - name: add docker repo key
   apt_key:
-    keyserver: https://yum.dockerproject.org/gpg
+    keyserver: hkp://p80.pool.sks-keyservers.net:80
     key: 58118E89F3A912897C070ADBF76221572C52609D
