--- a/tasks/install_docker.yml
+++ b/tasks/install_docker.yml
@@ -1,4 +1,35 @@
-- name: add docker repo key
-  apt_key:
-    keyserver: hkp://p80.pool.sks-keyservers.net:80
-    id: 58118E89F3A912897C070ADBF76221572C52609D
+---
+
+# Docker Convenience Script Can Only Be Run Once
+- name: Determine if docker is installed
+  stat:
+    path: /usr/bin/docker
+  register: docker_there
+  ignore_errors: True
+
+# https://docs.docker.com/engine/installation/linux/docker-ce/debian/#install-using-the-convenience-script
+- name: Run Docker {{ docker_ce_version }} Install Script
+  script: "files/get-docker.sh {{ docker_ce_version }}"
+  when: docker_there.stat.exists == False
+  register: docker_installed
+
+- name: Lock docker version to {{ docker_ce_version}}
+  command: /usr/bin/apt-mark hold docker-ce
+  when: docker_installed.changed
+
+
+- name: Pass bridged IPv4 traffic to iptables' chains
+  sysctl:
+    name: net.bridge.bridge-nf-call-iptables
+    value: 1
+    state: present
+
+- name: Install k8s {{ kubernetes_package_version }} Y'all
+  apt:
+    name: "{{ item }}={{ kubernetes_package_version }}"
+    state: present
+    force: yes
+  with_items:
+    - kubelet
+    - kubeadm
+    - kubectl
